# AliceO2

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CODEOWNERS
Framework/AnalysisSupport/: CMakeLists.txt
Framework/AnalysisSupport/src/: AODJAlienReaderHelpers.cxx  AODReaderHelpers.cxx  AODReaderHelpers.h  AODWriterHelpers.cxx  DataInputDirector.cxx  DataInputDirector.h  TTreePlugin.cxx  TableTreeHelpers.cxx
Framework/AnalysisSupport/test/: test_DataInputDirector.cxx  test_NavigateToLevel.cxx
GPU/Common/: CMakeLists.txt  GPUCommonAlgorithm.h  GPUCommonAlignedAlloc.h  GPUCommonLogger.h  GPUCommonMath.h
GPU/GPUTracking/: CMakeLists.txt  GPUTrackingLinkDef_O2.h  GPUTrackingLinkDef_O2_DataTypes.h  kernels.cmake
GPU/GPUTracking/Base/: GPUConstantMem.h  GPUGeneralKernels.h  GPUParam.cxx  GPUParam.h  GPUParam.inc  GPUProcessor.cxx  GPUReconstruction.cxx  GPUReconstruction.h  GPUReconstructionCPU.cxx  GPUReconstructionCPU.h  GPUReconstructionCPUKernels.h  GPUReconstructionConvert.cxx  GPUReconstructionConvert.h  GPUReconstructionDebug.cxx  GPUReconstructionDeviceBase.cxx  GPUReconstructionDeviceBase.h  GPUReconstructionIO.h  GPUReconstructionIncludes.h  GPUReconstructionIncludesITS.h  GPUReconstructionKernelMacros.h  GPUReconstructionLibrary.cxx  GPUReconstructionProcessing.cxx  GPUReconstructionProcessing.h  GPUReconstructionProcessingKernels.inc  GPUReconstructionTimeframe.cxx  GPUReconstructionTimeframe.h
GPU/GPUTracking/DataCompression/: GPUTPCClusterStatistics.cxx  GPUTPCClusterStatistics.h  GPUTPCCompression.cxx  GPUTPCCompression.h  GPUTPCCompressionKernels.cxx  GPUTPCCompressionKernels.h  GPUTPCCompressionTrackModel.h  GPUTPCDecompression.cxx  GPUTPCDecompression.h  GPUTPCDecompressionKernels.cxx  GPUTPCDecompressionKernels.h  TPCClusterDecompressionCore.inc  TPCClusterDecompressor.cxx
GPU/GPUTracking/DataTypes/: CalibdEdxContainer.cxx  CalibdEdxContainer.h  CalibdEdxTrackTopologyPol.cxx  CalibdEdxTrackTopologyPol.h  GPUConfigDump.cxx  GPUDataTypes.h  GPUDataTypesConfig.cxx  GPUDataTypesConfig.h  GPUDataTypesIO.h  GPUDataTypesQA.h  GPUKernelClassesFwd.h  GPUMemorySizeScalers.cxx  GPUMemorySizeScalers.h  GPUO2ConfigurableParam.cxx  GPUO2ConfigurableParam.h  GPUO2ExternalUser.h  GPUSettings.h  GPUTPCClusterOccupancyMap.h  GPUTPCExtraADC.h  GPUTPCGMMergedTrackHit.h  GPUTPCGMPolynomialField.cxx  GPUTPCGeometry.h  GPUTRDRecoParam.cxx  GPUTRDRecoParam.h  GPUTRDTrack.cxx  TPCPadBitMap.cxx  TPCPadBitMap.h  TPCPadGainCalib.cxx  TPCPadGainCalib.h  TPCZSLinkMapping.cxx  TPCZSLinkMapping.h
GPU/GPUTracking/Debug/: GPUROOTDump.h  GPUROOTDumpCore.cxx  GPUROOTDumpCore.h  GPUTPCClusterFilter.cxx
GPU/GPUTracking/Definitions/: GPUDef.h  GPUDefConstantsAndSettings.h  GPUDefParametersConstants.h  GPUDefParametersDefaults.h  GPUDefParametersWrapper.h  GPUSettingsList.h  clusterFinderDefs.h
GPU/GPUTracking/Global/: GPUChain.cxx  GPUChain.h  GPUChainITS.cxx  GPUChainITS.h  GPUChainTracking.cxx  GPUChainTracking.h  GPUChainTrackingClusterizer.cxx  GPUChainTrackingCompression.cxx  GPUChainTrackingDebug.h  GPUChainTrackingDebugAndProfiling.cxx  GPUChainTrackingGetters.inc  GPUChainTrackingIO.cxx  GPUChainTrackingMerger.cxx  GPUChainTrackingRefit.cxx  GPUChainTrackingSectorTracker.cxx  GPUChainTrackingTRD.cxx  GPUChainTrackingTransformation.cxx  GPUErrors.cxx  GPUErrors.h  GPUTrackingInputProvider.cxx
GPU/GPUTracking/Interface/: CMakeLists.txt  GPUO2ExternalUser.h  GPUO2Interface.cxx  GPUO2Interface.h  GPUO2InterfaceConfigurableParam.h  GPUO2InterfaceConfiguration.cxx  GPUO2InterfaceConfiguration.h  GPUO2InterfaceConfiguration.inc  GPUO2InterfaceDisplay.cxx  GPUO2InterfaceDisplay.h  GPUO2InterfaceQA.h  GPUO2InterfaceRefit.cxx  GPUO2InterfaceRefit.h  GPUO2InterfaceUtils.cxx  GPUO2InterfaceUtils.h
GPU/GPUTracking/Merger/: GPUTPCGMMergedTrack.h  GPUTPCGMMerger.cxx  GPUTPCGMMerger.h  GPUTPCGMMergerDump.cxx  GPUTPCGMMergerGPU.cxx  GPUTPCGMMergerGPU.h  GPUTPCGMO2Output.cxx  GPUTPCGMPropagator.cxx  GPUTPCGMPropagator.h  GPUTPCGMSectorTrack.cxx  GPUTPCGMSectorTrack.h  GPUTPCGMTrackParam.cxx  GPUTPCGMTrackParam.h  GPUTPCGlobalDebugSortKernels.cxx  GPUTPCGlobalDebugSortKernels.h
GPU/GPUTracking/Refit/: GPUTrackingRefit.cxx  GPUTrackingRefit.h  GPUTrackingRefitKernel.h
GPU/GPUTracking/SectorTracker/: GPUTPCCreateOccupancyMap.cxx  GPUTPCCreateOccupancyMap.h  GPUTPCCreateTrackingData.h  GPUTPCDef.h  GPUTPCExtrapolationTracking.cxx  GPUTPCExtrapolationTracking.h  GPUTPCMCInfo.h  GPUTPCNeighboursCleaner.cxx  GPUTPCNeighboursCleaner.h  GPUTPCNeighboursFinder.cxx  GPUTPCNeighboursFinder.h  GPUTPCSectorDebugSortKernels.cxx  GPUTPCSectorDebugSortKernels.h  GPUTPCStartHitsFinder.cxx  GPUTPCStartHitsFinder.h  GPUTPCStartHitsSorter.cxx  GPUTPCStartHitsSorter.h  GPUTPCTracker.cxx  GPUTPCTracker.h  GPUTPCTrackerDump.cxx  GPUTPCTrackingData.cxx  GPUTPCTrackingData.h  GPUTPCTrackletConstructor.cxx  GPUTPCTrackletConstructor.h  GPUTPCTrackletSelector.cxx  GPUTPCTrackletSelector.h
GPU/GPUTracking/Standalone/: CMakeLists.txt
GPU/GPUTracking/TPCClusterFinder/: CfArray2D.h  CfChargePos.h  CfUtils.h  ClusterAccumulator.cxx  ClusterAccumulator.h  GPUTPCCFChainContext.h  GPUTPCCFChargeMapFiller.cxx  GPUTPCCFChargeMapFiller.h  GPUTPCCFDecodeZS.cxx  (+28 more)
GPU/TPCFastTransformation/: CMakeLists.txt  ChebyshevFit1D.cxx  ChebyshevFit1D.h  CorrectionMapsHelper.cxx  CorrectionMapsHelper.h  CorrectionMapsHelperFull.cxx  CorrectionMapsHelperFull.h  CorrectionMapsTypes.h  MultivariatePolynomialHelper.cxx  NDPiecewisePolynomials.h  Spline.cxx  Spline.h  Spline1D.cxx  Spline1D.h  Spline1DHelper.cxx  Spline1DHelper.h  Spline1DHelperOld.cxx  Spline1DHelperOld.h  Spline1DSpec.cxx  Spline1DSpec.h  Spline2D.cxx  Spline2D.h  Spline2DHelper.cxx  Spline2DHelper.h  Spline2DSpec.cxx  Spline2DSpec.h  SplineHelper.cxx  SplineSpec.cxx  SplineSpec.h  TPCFastSpaceChargeCorrection.cxx  TPCFastSpaceChargeCorrection.h  TPCFastSpaceChargeCorrectionMap.h  TPCFastTransform.cxx  TPCFastTransform.h  TPCFastTransformGeo.cxx  TPCFastTransformGeo.h  TPCFastTransformGeoPOD.h  TPCFastTransformManager.cxx  TPCFastTransformPOD.cxx  TPCFastTransformPOD.h  (+2 more)
(+1344 files in other folders)
